--- a/contact_structural_mechanics/use_cases/self_contact/source/ProjectParameters.json
+++ b/contact_structural_mechanics/use_cases/self_contact/source/ProjectParameters.json
@@ -20,17 +20,12 @@
             "materials_filename" : "StructuralMaterials.json"
         },
         "time_stepping"                      : {
-            "time_step_intervals" :
-            {
-                "first" : {
-                    "interval"  : [0.0, 0.5],
-                    "time_step" : 5.0e-1
-                },
-                "second" : {
-                    "interval"  : [0.5, "End"],
-                    "time_step" : 1.0e-2
-                }
-            }
+            "time_step_table" : [
+                [0.0, 0.5],
+                [0.4999999, 0.5],
+                [0.5, 0.1],
+                [0.55, 0.1]
+            ]
         },
         "convergence_criterion"           : "contact_residual_criterion",
         "displacement_relative_tolerance" : 0.0001,
