--- a/contact_structural_mechanics/use_cases/cylinders/source/horizontal_movement_1/ProjectParameters.json
+++ b/contact_structural_mechanics/use_cases/cylinders/source/horizontal_movement_1/ProjectParameters.json
@@ -80,7 +80,7 @@
             "process_name"  : "GiDOutputProcess",
             "help"          : "This process writes postprocessing files for GiD",
             "Parameters"    : {
-                "model_part_name"        : "Structure.computing_domain",
+                "model_part_name"        : "Structure",
                 "output_name"            : "cylinders",
                 "postprocess_parameters" : {
                     "result_file_configuration" : {
@@ -112,7 +112,7 @@
             "process_name"  : "VtkOutputProcess",
             "help"          : "This process writes postprocessing files for Paraview",
             "Parameters"    : {
-                "model_part_name"                    : "Structure.computing_domain",
+                "model_part_name"                    : "Structure",
                 "output_control_type"                : "step",
                 "output_frequency"                   : 20,
                 "file_format"                        : "ascii",
