--- a/mmg_remeshing_examples/use_cases/beam2D/source/ProjectParameters.json
+++ b/mmg_remeshing_examples/use_cases/beam2D/source/ProjectParameters.json
@@ -1,7 +1,6 @@
 {
     "problem_data"             : {
         "problem_name"    : "beam2D_test",
-        "domain_size"     : 2,
         "parallel_type"   : "OpenMP",
         "start_time"      : 0.0,
         "end_time"        : 1.0,
@@ -60,6 +59,7 @@
                 "model_part_name" : "Structure.SelfWeight2D_Self_weight_Auto1",
                 "variable_name"   : "VOLUME_ACCELERATION",
                 "value"           : [0.0,-9.81,0.0],
+                "constrained"     : [false,false,false],
                 "interval"        : [0.0,"End"]
             }
         }],
@@ -107,7 +107,7 @@
             "process_name"  : "GiDOutputProcess",
             "help"          : "This process writes postprocessing files for GiD",
             "Parameters"    : {
-                "model_part_name"        : "Structure.computing_domain",
+                "model_part_name"        : "Structure",
                 "output_name"            : "beam2D_test",
                 "postprocess_parameters" : {
                     "result_file_configuration" : {
@@ -137,7 +137,7 @@
             "process_name"  : "VtkOutputProcess",
             "help"          : "This process writes postprocessing files for Paraview",
             "Parameters"    : {
-                "model_part_name"                    : "Structure.computing_domain",
+                "model_part_name"                    : "Structure",
                 "output_control_type"                : "step",
                 "output_frequency"                   : 1,
                 "file_format"                        : "ascii",
