Use wind model from ExaquteSandboxApplication

--- a/multilevel_monte_carlo/use_cases/wind_engineering_CAARC/deterministic_steady_inlet_ensemble_average/source/problem_settings/ProjectParametersCAARC_MC_steadyInlet.json
+++ b/multilevel_monte_carlo/use_cases/wind_engineering_CAARC/deterministic_steady_inlet_ensemble_average/source/problem_settings/ProjectParametersCAARC_MC_steadyInlet.json
@@ -162,6 +162,7 @@
         }],
         "boundary_conditions_process_list" : [{
             "python_module" : "steady_wind_kratos_inlet_process",
+            "kratos_module" : "KratosMultiphysics.ExaquteSandboxApplication",
             "Parameters"    : {
                 "inlet_model_part_name" : "FluidModelPart.AutomaticInlet3D_inlet/Flow",
                 "y0": -432.0,
