--- a/multilevel_monte_carlo/use_cases/wind_engineering_CAARC/deterministic_turbulent_inlet_ensemble_average/source/problem_settings/ProjectParametersCAARC_MC_Fractional_onTheFlyInlet.json
+++ b/multilevel_monte_carlo/use_cases/wind_engineering_CAARC/deterministic_turbulent_inlet_ensemble_average/source/problem_settings/ProjectParametersCAARC_MC_Fractional_onTheFlyInlet.json
@@ -194,7 +194,7 @@
         }],
         "boundary_conditions_process_list" : [{
             "python_module" : "onthefly_kratos_inlet_process",
-            "kratos_module" : "KratosMultiphysics.ExaquteSandboxApplication",
+            "kratos_module" : "KratosMultiphysics.ExaquteSandboxApplication.WindGenerator",
             "Parameters"    : {
                 "inlet_model_part_name" : "FluidModelPart.AutomaticInlet3D_inlet/Flow",
                 "y0": -432.0,
