--- a/contact_structural_mechanics/use_cases/cylinders/source/horizontal_movement_2/ProjectParameters_frictional.json
+++ b/contact_structural_mechanics/use_cases/cylinders/source/horizontal_movement_2/ProjectParameters_frictional.json
@@ -66,24 +66,25 @@
             "kratos_module" : "KratosMultiphysics.ContactStructuralMechanicsApplication",
             "process_name"  : "ALMContactProcess",
             "Parameters"    : {
-                "model_part_name"     : "Structure",
-                "contact_model_part"  : {
+                "model_part_name"       : "Structure",
+                "friction_coefficients" : {"0" : 1.0},
+                "contact_model_part"    : {
                     "0" : ["CONTACT_Contact_slave_Auto1","CONTACT_Contact_master_Auto1"]
                 },
                 "assume_master_slave" : {
                     "0" : ["CONTACT_Contact_slave_Auto1"]
                 },
                 "contact_type"        : "Frictional",
-				"tangent_factor"              : 2.5e-2,
-				"operator_threshold"          : 0.0,
-				"slip_step_reset_frequency"   : 1,
-				"search_parameters"           : {
-					"search_factor"                       : 3.5,
-					"active_check_factor"                 : 0.0025
-				},
-				"advance_ALM_parameters" : {
-					"stiffness_factor"            : 1.0e0
-				}
+                "tangent_factor"              : 2.5e-2,
+                "operator_threshold"          : 0.0,
+                "slip_step_reset_frequency"   : 1,
+                "search_parameters"           : {
+                    "search_factor"                       : 3.5,
+                    "active_check_factor"                 : 0.0025
+                },
+                "advance_ALM_parameters" : {
+                    "stiffness_factor"            : 1.0e0
+                }
             }
         }],
         "loads_process_list"       : [],
