--- a/contact_structural_mechanics/use_cases/cylinders/source/horizontal_movement_2/ProjectParameters_frictional.json
+++ b/contact_structural_mechanics/use_cases/cylinders/source/horizontal_movement_2/ProjectParameters_frictional.json
@@ -109,7 +109,7 @@
                         },
                         "file_label"          : "step",
                         "output_control_type" : "time",
-                        "output_frequency"    : 0.05,
+                        "output_interval"     : 0.05,
                         "body_output"         : true,
                         "node_output"         : false,
                         "skin_output"         : false,
@@ -131,11 +131,11 @@
             "Parameters"    : {
                 "model_part_name"                    : "Structure",
                 "output_control_type"                : "time",
-                "output_frequency"                   : 0.05,
+                "output_interval"                    : 0.05,
                 "file_format"                        : "ascii",
                 "output_precision"                   : 7,
                 "output_sub_model_parts"             : false,
-                "folder_name"                        : "vtk_output",
+                "output_path"                        : "vtk_output",
                 "save_output_files_in_folder"        : true,
                 "nodal_solution_step_data_variables" : ["DISPLACEMENT","NORMAL","REACTION","VECTOR_LAGRANGE_MULTIPLIER","WEIGHTED_GAP","WEIGHTED_SLIP"],
                 "nodal_data_value_variables"         : ["AUGMENTED_NORMAL_CONTACT_PRESSURE","AUGMENTED_TANGENT_CONTACT_PRESSURE","TANGENT_XI","TANGENT_ETA"],
