--- a/contact_structural_mechanics/use_cases/tooth_model/source/composite15+dentine05+enamel25/ProjectParameters.json
+++ b/contact_structural_mechanics/use_cases/tooth_model/source/composite15+dentine05+enamel25/ProjectParameters.json
@@ -91,7 +91,7 @@
                         },
                         "file_label"          : "step",
                         "output_control_type" : "step",
-                        "output_frequency"    : 1.0,
+                        "output_interval"     : 1.0,
                         "body_output"         : true,
                         "node_output"         : false,
                         "skin_output"         : false,
@@ -113,11 +113,11 @@
             "Parameters"    : {
                 "model_part_name"                    : "Structure",
                 "output_control_type"                : "step",
-                "output_frequency"                   : 1,
+                "output_interval"                    : 1,
                 "file_format"                        : "ascii",
                 "output_precision"                   : 7,
                 "output_sub_model_parts"             : false,
-                "folder_name"                        : "vtk_output",
+                "output_path"                        : "vtk_output",
                 "save_output_files_in_folder"        : true,
                 "write_properties_id"                : true,
                 "nodal_solution_step_data_variables" : ["DISPLACEMENT","VOLUME_ACCELERATION","NORMAL","REACTION","VECTOR_LAGRANGE_MULTIPLIER","WEIGHTED_GAP"],
