--- a/dem_structures_coupling/use_cases/ball_and_box.gid/ProjectParameters.json
+++ b/dem_structures_coupling/use_cases/ball_and_box.gid/ProjectParameters.json
@@ -68,7 +68,7 @@
             "process_name"  : "GiDOutputProcess",
             "help"          : "This process writes postprocessing files for GiD",
             "Parameters"    : {
-                "model_part_name"        : "Structure.computing_domain",
+                "model_part_name"        : "Structure",
                 "output_name"            : "ball_and_box",
                 "postprocess_parameters" : {
                     "result_file_configuration" : {
