--- a/mmg_remeshing_examples/use_cases/contacting_cylinders/source/ProjectParameters.json
+++ b/mmg_remeshing_examples/use_cases/contacting_cylinders/source/ProjectParameters.json
@@ -129,7 +129,7 @@
             "process_name"  : "GiDOutputProcess",
             "help"          : "This process writes postprocessing files for GiD",
             "Parameters"    : {
-                "model_part_name"        : "Structure.computing_domain",
+                "model_part_name"        : "Structure",
                 "output_name"            : "cylinders_hessian_remesh",
                 "postprocess_parameters" : {
                     "result_file_configuration" : {
@@ -161,7 +161,7 @@
             "process_name"  : "VtkOutputProcess",
             "help"          : "This process writes postprocessing files for Paraview",
             "Parameters"    : {
-                "model_part_name"                    : "Structure.computing_domain",
+                "model_part_name"                    : "Structure",
                 "output_control_type"                : "time",
                 "output_frequency"                   : 1.0e-2,
                 "file_format"                        : "ascii",
