--- a/multilevel_monte_carlo/use_cases/wind_engineering_CAARC/steady_inlet_ensemble_average/source/problem_settings/ProjectParametersCAARC_MC_steadyInlet.json
+++ b/multilevel_monte_carlo/use_cases/wind_engineering_CAARC/steady_inlet_ensemble_average/source/problem_settings/ProjectParametersCAARC_MC_steadyInlet.json
@@ -4,12 +4,14 @@
         "parallel_type" : "OpenMP",
         "echo_level"    : 0,
         "start_time"    : 0.0,
-        "end_time"      : 50.0,
+        "end_time"      : 1.0,
         "perturbation"  : {
             "type"      : "correlated",
             "intensity" : 0.1
         },
-        "burnin_time"   : 10.0
+        "burnin_time"   : 0.3,
+        "random_reference_velocity" : false,
+        "random_roughness_height" : true
     },
     "solver_settings"  : {
         "model_part_name"                 : "FluidModelPart",
@@ -162,13 +164,13 @@
         }],
         "boundary_conditions_process_list" : [{
             "python_module" : "steady_wind_kratos_inlet_process",
-            "kratos_module" : "KratosMultiphysics.ExaquteSandboxApplication.WindGenerator",
+	        "kratos_module" : "KratosMultiphysics.ExaquteSandboxApplication.WindGenerator",
             "Parameters"    : {
                 "inlet_model_part_name" : "FluidModelPart.AutomaticInlet3D_inlet/Flow",
                 "y0": -432.0,
                 "z0": 0.0,
                 "inlet_position": 0.0,
-                "ramp_time": 10.0,
+                "ramp_time": 0.0,
                 "mean_profile_type": "logarithm",
                 "umean": 40.0,
                 "reference_height": 180.0,
@@ -246,17 +248,18 @@
             }
         }],
         "auxiliar_process_list"            : [{
-                "python_module" : "compute_body_fitted_drag_process",
-                "kratos_module" : "KratosMultiphysics.FluidDynamicsApplication",
-                "process_name"  : "ComputeBodyFittedDragProcess",
+                "python_module" : "compute_body_fitted_drag_and_moment_process",
+                "kratos_module" : "KratosMultiphysics.ExaquteSandboxApplication",
+                "process_name"  : "ComputeBodyFittedDragAndMomentProcess",
                 "Parameters"    : {
                     "model_part_name"        : "FluidModelPart.NoSlip3D_structure",
                     "write_drag_output_file" : true,
 		            "output_file_settings" :{
                         "file_name":  "drag_time_series",
-                        "output_path": "drag"
+                        "folder_name": "drag"
                     },
                     "print_drag_to_screen"   : false,
+                    "reference_point"        : [0.0,0.0,0.0],
                     "interval"               : [0.0,"End"]
                 }
         },{
