--- a/multilevel_monte_carlo/use_cases/wind_engineering_CAARC/turbulent_inlet_monte_carlo/source/problem_settings/ProjectParametersCAARC_MC_Fractional_onTheFlyInlet_finer283k.json
+++ b/multilevel_monte_carlo/use_cases/wind_engineering_CAARC/turbulent_inlet_monte_carlo/source/problem_settings/ProjectParametersCAARC_MC_Fractional_onTheFlyInlet_finer283k.json
@@ -4,12 +4,14 @@
         "parallel_type" : "OpenMP",
         "echo_level"    : 0,
         "start_time"    : 0.0,
-        "end_time"      : 25.0,
+        "end_time"      : 0.8,
         "perturbation"  : {
             "type"      : "correlated",
             "intensity" : 0.1
         },
-        "burnin_time"   : 10.0
+        "burnin_time"   : 0.4,
+        "random_reference_velocity" : false,
+        "random_roughness_height" : false
     },
     "output_processes" : {
         "gid_output" : [{
@@ -94,13 +96,13 @@
         "no_skin_parts"                   : ["VelocityConstraints3D_long_lines"],
         "time_stepping"                   : {
             "automatic_time_step" : false,
-            "time_step"           : 0.2375
+            "time_step"           : 0.11875
         }
     },
     "processes"        : {
         "initial_conditions_process_list"  : [{
             "python_module" : "kratos_perturbation_process",
-	    "kratos_module" : "KratosMultiphysics.ExaquteSandboxApplication",
+            "kratos_module" : "KratosMultiphysics.ExaquteSandboxApplication",
             "Parameters"    : {
                 "model_part_name" : "FluidModelPart.Parts_fluid",
                 "correlated_noise_generator" : {
@@ -146,7 +148,7 @@
                                         "node_output"         : false,
                                         "skin_output"         : false,
                                         "plane_output"        : [],
-                                        "nodal_results"       : ["TEMPERATURE","VELOCITY"],
+                                        "nodal_results"       : ["VELOCITY"],
                                         "nodal_nonhistorical_results" : [],
                                         "gauss_point_results" : []
                                     },
@@ -195,7 +197,7 @@
         "boundary_conditions_process_list" : [{
             "python_module" : "onthefly_kratos_inlet_process",
             "kratos_module" : "KratosMultiphysics.ExaquteSandboxApplication.WindGenerator",
-            "Parameters"    : {
+	    "Parameters"    : {
                 "inlet_model_part_name" : "FluidModelPart.AutomaticInlet3D_inlet/Flow",
                 "y0": -432.0,
                 "z0": 0.0,
@@ -276,17 +278,18 @@
             }
         }],
         "auxiliar_process_list"            : [{
-                "python_module" : "compute_body_fitted_drag_process",
-                "kratos_module" : "KratosMultiphysics.FluidDynamicsApplication",
-                "process_name"  : "ComputeBodyFittedDragProcess",
+                "python_module" : "compute_body_fitted_drag_and_moment_process",
+                "kratos_module" : "KratosMultiphysics.ExaquteSandboxApplication",
+                "process_name"  : "ComputeBodyFittedDragAndMomentProcess",
                 "Parameters"    : {
                     "model_part_name"        : "FluidModelPart.NoSlip3D_structure",
                     "write_drag_output_file" : true,
         		    "output_file_settings" :{
                         "file_name":  "drag_time_series",
-                        "output_path": "drag"
+                        "folder_name": "drag"
                     },
                     "print_drag_to_screen"   : false,
+                    "reference_point"        : [0.0,0.0,0.0],
                     "interval"               : [0.0,"End"]
                 }
         },{
