--- a/multilevel_monte_carlo/use_cases/wind_engineering_CAARC/steady_inlet_monte_carlo/source/problem_settings/ProjectParametersCAARC_MC_steadyInlet.json
+++ b/multilevel_monte_carlo/use_cases/wind_engineering_CAARC/steady_inlet_monte_carlo/source/problem_settings/ProjectParametersCAARC_MC_steadyInlet.json
@@ -4,44 +4,14 @@
         "parallel_type" : "OpenMP",
         "echo_level"    : 0,
         "start_time"    : 0.0,
-        "end_time"      : 25.0,
+        "end_time"      : 50.0,
         "perturbation"  : {
             "type"      : "correlated",
             "intensity" : 0.1
         },
-        "burnin_time"   : 10.0
-    },
-    "output_processes" : {
-        "gid_output" : [{
-            "python_module" : "gid_output_process",
-            "kratos_module" : "KratosMultiphysics",
-            "process_name"  : "GiDOutputProcess",
-            "help"          : "This process writes postprocessing files for GiD",
-            "Parameters"    : {
-                "model_part_name"        : "FluidModelPart.fluid_computational_model_part",
-                "output_name"            : "CAARC3D",
-                "postprocess_parameters" : {
-                    "result_file_configuration" : {
-                        "gidpost_flags"       : {
-                            "GiDPostMode"           : "GiD_PostBinary",
-                            "WriteDeformedMeshFlag" : "WriteDeformed",
-                            "WriteConditionsFlag"   : "WriteConditions",
-                            "MultiFileFlag"         : "MultipleFiles"
-                        },
-                        "file_label"          : "step",
-                        "output_control_type" : "step",
-                        "output_frequency"    : 1.0,
-                        "body_output"         : true,
-                        "node_output"         : false,
-                        "skin_output"         : false,
-                        "nodal_results"       : ["VELOCITY","PRESSURE"],
-                        "nodal_nonhistorical_results" : ["AVERAGED_VELOCITY","AVERAGED_PRESSURE","TEMPERATURE"],
-                        "gauss_point_results" : ["VORTICITY_MAGNITUDE","VORTICITY"]
-                    },
-                    "point_data_configuration"  : []
-                }
-            }
-        }]
+        "burnin_time"   : 10.0,
+        "random_reference_velocity" : false,
+        "random_roughness_height" : false
     },
     "solver_settings"  : {
         "model_part_name"                 : "FluidModelPart",
@@ -49,7 +19,7 @@
         "solver_type"                     : "FractionalStep",
         "model_import_settings"           : {
             "input_type"     : "mdpa",
-            "input_filename" : "problem_settings/CAARC_3d_combinedPressureVelocity_283k"
+            "input_filename" : "problem_settings/CAARC_3d_combinedPressureVelocity_312k"
         },
         "material_import_settings"    : {
             "materials_filename" : "materials/materials_Re_119M.json"
@@ -100,7 +70,7 @@
     "processes"        : {
         "initial_conditions_process_list"  : [{
             "python_module" : "kratos_perturbation_process",
-	    "kratos_module" : "KratosMultiphysics.ExaquteSandboxApplication",
+            "kratos_module" : "KratosMultiphysics.ExaquteSandboxApplication",
             "Parameters"    : {
                 "model_part_name" : "FluidModelPart.Parts_fluid",
                 "correlated_noise_generator" : {
@@ -159,7 +129,7 @@
                         "model_part_name" : "FluidModelPart",
                         "domain_size"     : 3,
                         "penalty_coefficient" : 2e2,
-                        "load_velocity_field" : "average_velocity_field_CAARC_3d_combinedPressureVelocity_283k_690.0.dat",
+                        "load_velocity_field" : "average_velocity_field_CAARC_3d_combinedPressureVelocity_312k_690.0.dat",
                         "structure_model_part" : "NoSlip3D_structure"
                     },
                     "solver_settings": {
@@ -167,7 +137,7 @@
                         "domain_size" : 3,
                         "model_import_settings": {
                             "input_type": "mdpa",
-                            "input_filename": "problem_settings/CAARC_3d_combinedPressureVelocity_283k"
+                            "input_filename": "problem_settings/CAARC_3d_combinedPressureVelocity_312k"
                         },
                         "material_import_settings"           : {
                             "materials_filename" : "problem_settings/materials_Poisson.json"
@@ -193,8 +163,8 @@
             }
         }],
         "boundary_conditions_process_list" : [{
-            "python_module" : "onthefly_kratos_inlet_process",
-            "kratos_module" : "KratosMultiphysics.ExaquteSandboxApplication.WindGenerator",
+            "python_module" : "steady_wind_kratos_inlet_process",
+	        "kratos_module" : "KratosMultiphysics.ExaquteSandboxApplication.WindGenerator",
             "Parameters"    : {
                 "inlet_model_part_name" : "FluidModelPart.AutomaticInlet3D_inlet/Flow",
                 "y0": -432.0,
@@ -205,8 +175,10 @@
                 "umean": 40.0,
                 "reference_height": 180.0,
                 "roughness_height": 2.0,
-                "wind_grid_levels": [7,7,7],
-                "lx": 720.0,
+                "Gamma": 3.9,
+                "wind_grid_levels": [8,8,7],
+                "time_interval_length": 30.0,
+		        "lx": 1440.0,
                 "seed": 9000
             }
         },{
@@ -276,17 +248,18 @@
             }
         }],
         "auxiliar_process_list"            : [{
-                "python_module" : "compute_body_fitted_drag_process",
-                "kratos_module" : "KratosMultiphysics.FluidDynamicsApplication",
-                "process_name"  : "ComputeBodyFittedDragProcess",
+                "python_module" : "compute_body_fitted_drag_and_moment_process",
+                "kratos_module" : "KratosMultiphysics.ExaquteSandboxApplication",
+                "process_name"  : "ComputeBodyFittedDragAndMomentProcess",
                 "Parameters"    : {
                     "model_part_name"        : "FluidModelPart.NoSlip3D_structure",
                     "write_drag_output_file" : true,
-        		    "output_file_settings" :{
+		            "output_file_settings" :{
                         "file_name":  "drag_time_series",
-                        "output_path": "drag"
+                        "folder_name": "drag"
                     },
                     "print_drag_to_screen"   : false,
+                    "reference_point"        : [0.0,0.0,0.0],
                     "interval"               : [0.0,"End"]
                 }
         },{
